newsletter overlapp and another little details fixed

--- a/sassy/partials/_media.scss
+++ b/sassy/partials/_media.scss
@@ -68,7 +68,7 @@
     
         h2{
             margin: 0;
-            font-size: 1.5rem;
+            font-size: 1.3rem;
         }
     
         #email{
