--- a/sassy/partials/_newsletter.scss
+++ b/sassy/partials/_newsletter.scss
@@ -1,4 +1,10 @@
 .newsletter{
+    //Overlapping
+    position: relative;
+    width: 80%;
+    margin: -3rem auto;
+    border-radius: .3em;
+
     background-color: $lightgray-clr;
     @include flexConfig(space-around);
     flex-direction: column;
