--- a/sassy/partials/_video.scss
+++ b/sassy/partials/_video.scss
@@ -1,9 +1,12 @@
 .video{
+    //overlaping
+    padding-top: 5rem;
+
     background-color: $pewterBlue-clr;
     color: $white-clr;
     h1{
         text-align: center;
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
         font-weight: 400;
     }
     &_perks{
